--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,9 +13,84 @@
         <!-- Customize your theme here. -->
     </style>
 
+
     <style name="textStyleSubtitle2SemiBold" parent="TextAppearance.MaterialComponents.Subtitle2">
         <item name="android:textSize">@dimen/_12ssp</item>
         <item name="fontStyle">normal</item>
-        <item name="android:textColor">@color/dark_primary_color</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="textStyleSubtitle2" parent="TextAppearance.MaterialComponents.Subtitle2">
+        <item name="android:textSize">@dimen/_12ssp</item>
+        <item name="fontStyle">normal</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="textStyleHeadline6" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textSize">@dimen/_15ssp</item>
+        <item name="fontStyle">normal</item>
+        <item name="android:textColor">@color/primary_text</item>
+    </style>
+
+
+    <style name="textStyleBody2" parent="TextAppearance.MaterialComponents.Body2">
+        <item name="android:textSize">@dimen/_10ssp</item>
+        <item name="fontStyle">normal</item>
+        <item name="android:textColor">@color/secondary_text</item>
+    </style>
+
+    <style name="TextInputLayoutCustomFont" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:theme">@style/ThemeOverlay.TextInputEditText.CustomFont</item>
+        <item name="hintTextAppearance">@style/TextInputLayoutHintText</item>
+        <item name="helperTextTextAppearance">@style/TextInputLayoutHelperText</item>
+        <item name="errorTextAppearance">@style/TextInputLayoutErrorText</item>
+        <item name="prefixTextAppearance">@style/ThemeOverlay.TextInputEditText.CustomFont</item>
+        <item name="prefixTextColor">@color/black_opacity_87</item>
+
+    </style>
+
+
+    <style name="ThemeOverlay.TextInputEditText.CustomFont" parent="ThemeOverlay.MaterialComponents">
+        <item name="android:maxLines">1</item>
+        <item name="android:textSize">@dimen/_13ssp</item>
+    </style>
+
+    <style name="CustomFontTextInputLayout" parent="Widget.Design.TextInputLayout">
+        <item name="hintTextAppearance">@style/TextInputLayoutHintText</item>
+        <item name="helperTextTextAppearance">@style/TextInputLayoutHelperText</item>
+        <item name="errorTextAppearance">@style/TextInputLayoutErrorText</item>
+    </style>
+
+    <style name="TextInputLayoutHintText" parent="@android:style/TextAppearance">
+        <item name="android:textSize">@dimen/_9ssp</item>
+
+    </style>
+
+    <style name="TextInputLayoutHelperText" parent="TextAppearance.Design.HelperText">
+
+        <item name="android:textSize">@dimen/_9ssp</item>
+        <!--Added Later-->
+        <item name="android:layout_marginTop">@dimen/_3sdp</item>
+        <item name="android:layout_marginLeft">@dimen/_12sdp</item>
+        <item name="android:textColor">@color/black_opacity_50</item>
+
+    </style>
+
+
+    <style name="TextInputLayoutErrorText" parent="TextAppearance.Design.Error">
+        <item name="android:textSize">@dimen/_9ssp</item>
+
+    </style>
+
+    <style name="textAppearanceNotFound" parent="TextAppearance.MaterialComponents.Subtitle2">
+        <item name="android:textSize">@dimen/_16ssp</item>
+        <item name="android:textColor">@color/black_opacity_50</item>
+
+    </style>
+
+    <style name="textAppearanceNotFoundDescription" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textSize">@dimen/_12ssp</item>
+        <item name="android:textColor">@color/black_opacity_30</item>
+
     </style>
 </resources>
