--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="error_color">#CC0000</color>
     <color name="bottom_sheet_bg">#FFFFFF</color>
     <color name="black_opacity_50">#80000000</color>
+    <color name="black_opacity_30">#4D000000</color>
 </resources>
