--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -83,6 +83,18 @@
 
     </style>
 
+    <style name="textAppearanceNotFound" parent="TextAppearance.MaterialComponents.Subtitle2">
+        <item name="android:textSize">@dimen/_16ssp</item>
+        <item name="android:textColor">@color/black_opacity_50</item>
+
+    </style>
+
+    <style name="textAppearanceNotFoundDescription" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textSize">@dimen/_12ssp</item>
+        <item name="android:textColor">@color/black_opacity_30</item>
+
+    </style>
+
 
 
 </resources>
